<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ItemView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_background_color"
        android:gravity="center"
        android:text="@string/user_title"
        android:textColor="@color/background"
        android:textSize="@dimen/text_phone_title_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/background">
            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/normal_space"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/user_avatar_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/back_logo" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/user_item_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/normal_space"
                android:layout_marginRight="@dimen/normal_space"
                android:layout_toRightOf="@id/user_avatar"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loginOrSingup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="登录/注册"
                    android:textSize="@dimen/text_tip_size" />

            </LinearLayout>

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_centerVertical="true"-->
            <!--                android:layout_marginLeft="@dimen/normal_space"-->
            <!--                android:layout_toRightOf="@+id/user_avatar"-->
            <!--                android:text="登录/注册"-->
            <!--                android:textSize="@dimen/text_phone_title_size" />-->

            <!--            <ImageView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_alignParentRight="true"-->
            <!--                android:layout_centerVertical="true"-->
            <!--                android:layout_marginRight="@dimen/normal_space"-->
            <!--                android:src="@drawable/ic_right" />-->
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:orientation="vertical">


        <com.jiateng.widget.UserItemView
            android:id="@+id/user_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/front_color"
            ItemView:itemImage="@drawable/ic_address_2"
            ItemView:itemText="@string/user_item_address" />


        <com.jiateng.widget.UserItemView
            android:id="@+id/user_item_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/front_color"
            ItemView:itemImage="@drawable/star"
            ItemView:itemText="@string/user_item_start" />


        <com.jiateng.widget.UserItemView
            android:id="@+id/user_item_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/front_color"
            ItemView:itemImage="@drawable/ic_more_1"
            ItemView:itemText="@string/user_item_more" />


        <com.jiateng.widget.UserItemView
            android:id="@+id/user_item_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/front_color"
            ItemView:itemImage="@drawable/ic_feedback"
            ItemView:itemText="@string/user_item_feedback" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_space"
        android:orientation="vertical">


        <com.jiateng.widget.UserItemView
            android:id="@+id/user_item_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/front_color"
            ItemView:itemImage="@drawable/ic_setting"
            ItemView:itemText="设置" />

    </LinearLayout>


</LinearLayout>